package org.humbird.soa.ipc.protoc.vo;

option java_package = "org.humbird.soa.ipc.protoc.vo";
option java_outer_classname = "LeeInfo";

//configuration data to configure a video player
message LeeReply
{
    optional string http_server_ip = 1; //server to connect to
    optional string tc_ip = 2; //traffic controller ip address
    optional string tc_if = 3; //interface name to configure traffic controller on
    optional string binary_share_ip = 4;
    enum PlayerType
    {
        BCM97208 = 0;
        LINUX32 = 1;
        ANDROID = 2;
    }
    optional PlayerType player_type = 5 [default = BCM97208];
}

message LeeRequest
{
    optional string version = 1;
}