package org.humbird.soa.ipc.protoc.vo;

import "leeInfo.proto";
option java_package = "org.humbird.soa.ipc.protoc.service";
option java_outer_classname = "UserService";
option java_generic_services = true; //if you don't do this, protoc wont generate the stubs you need for rpc

service GetUserService //in a generated file, look for this guy as an abstract class, you gonna extend it.
{
    rpc getConfig(LeeRequest) returns (LeeReply);
}